	new file:   ZGame/game_tutorials/OpenGL/First OpenGL Program/Lib/glew/lib/x64/glew32s.lib
	new file:   ZGame/game_tutorials/OpenGL/First OpenGL Program/Lib/glfw3/Lib/glfw3.lib
	new file:   ZGame/game_tutorials/OpenGL/Frames Per Second/Lib/glew/lib/Win32/glew32.lib
	new file:   ZGame/game_tutorials/OpenGL/Frames Per Second/Lib/glew/lib/Win32/glew32s.lib
	new file:   ZGame/game_tutorials/OpenGL/Frames Per Second/Lib/glew/lib/x64/glew32.lib
	new file:   ZGame/game_tutorials/OpenGL/Frames Per Second/Lib/glew/lib/x64/glew32s.lib
	new file:   ZGame/game_tutorials/OpenGL/Frames Per Second/Lib/glfw3/Lib/glfw3.lib
	new file:   ZGame/game_tutorials/OpenGL/Matrices/Lib/glew/lib/Win32/glew32.lib
	new file:   ZGame/game_tutorials/OpenGL/Matrices/Lib/glew/lib/Win32/glew32s.lib
	new file:   ZGame/game_tutorials/OpenGL/Matrices/Lib/glew/lib/x64/glew32.lib
	new file:   ZGame/game_tutorials/OpenGL/Matrices/Lib/glew/lib/x64/glew32s.lib
	new file:   ZGame/game_tutorials/OpenGL/Matrices/Lib/glfw3/Lib/glfw3.lib
	new file:   ZGame/game_tutorials/OpenGL/Quadrics/Glaux.lib
	new file:   ZGame/game_tutorials/OpenGL/Texture Mapping Part3/jpeg.lib
	new file:   ZGame/game_tutorials/OpenGL/Texture Mapping Part3/libc.lib
	new file:   ZGame/game_tutorials/Win32/2D RPG Part2/fmod.dll
	new file:   ZGame/game_tutorials/Win32/2D RPG Part2/fmodvc.lib
	new file:   ZGame/game_tutorials/Win32/2D RPG Part3/fmod.dll
	new file:   ZGame/game_tutorials/Win32/2D RPG Part3/fmodvc.lib
	new file:   ZGame/game_tutorials/Win32/2D RPG Part4/fmod.dll
	new file:   ZGame/game_tutorials/Win32/2D RPG Part4/fmodvc.lib
	new file:   ZGame/game_tutorials/Win32/2D RPG Part5/fmod.dll
	new file:   ZGame/game_tutorials/Win32/2D RPG Part5/fmodvc.lib
	new file:   ZGame/game_tutorials/Win32/2D RPG Part6/fmod.dll
	new file:   ZGame/game_tutorials/Win32/2D RPG Part6/fmodvc.lib
	new file:   ZGame/game_tutorials/Win32/BlackJack/GT_WinObj2D.lib
	new file:   ZGame/game_tutorials/Win32/BlackJack/libc.lib
