@@ -59,9 +59,10 @@
        Zcl_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
        Zcl_E : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      Zndex_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Zndex_E : //z 2015-05-29 16:02:31 L.216'28649 T751013779 .K ~316 +----+----+----+----+----+
-     TimeCnt : //z 2015-05-29 16:00:49 L.216'28751 T750941946 .K ~11  +----+----+----+----+----+
-     Reg.Cnt : //z 2015-05-28 17:45:17 L.217'22483 T1979531806.K ~16  +----+----+----+----+----+
+     Zndex_E : //z 2015-06-04 16:34:01 L.210'26759 T1567341263.K ~335 +----+----+----+----+----+
+     TimeCnt : //z 2015-06-04 16:18:56 L.210'27664 T1565113339.K ~12  +----+----+----+----+----+
+     Reg.Cnt : //z 2015-06-04 16:18:43 L.210'27677 T1565113303.K ~17  +----+----+----+----+----+
+     #17  R+ : //z 2015-06-04 16:18:43 L.210'27677 T1565113303.K ~17    V+.334  L+.354  
      #16  R+ : //z 2015-05-28 17:45:17 L.217'22483 T1979531806.K ~16    V+.295  L+.337  
      #15  R+ : //z 2015-05-22 17:22:59 L.223'23821 T1570244025.K ~15    V+.273  L+.295  
      #14  R+ : //z 2015-05-21 17:49:30 L.224'22230 T1505065974.K ~14    V+.196  L+.236  
@@ -79,7 +80,9 @@
      #2   R+ : //z 2015-04-27 11:31:41 L.248'44899 T1419899214.K ~2     V+.19   L+.104  
      #1   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~1     V+.3    L+.62   
      File.Op : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Version : //z 2015-05-29 16:02:31 L.216'28649 T751013779 .K ~332   R+.16   L+.348  --+----+
+     Version : //z 2015-06-04 16:34:01 L.210'26759 T1567341263.K ~352   R+.17   L+.356  --+----+
+     #18  V+ : //z 2015-06-04 16:19:29 L.210'27631 T1565149180.K ~342   R+.17   L+.357  
+     #17  R+ : //z 2015-06-04 16:18:43 L.210'27677 T1565113303.K ~334   R+.17   L+.355  V+.334  
      #17  V+ : //z 2015-05-29 16:01:55 L.216'28685 T750977912 .K ~323   R+.16   L+.347  
      #16  V+ : //z 2015-05-28 17:46:03 L.217'22437 T1979567706.K ~304   R+.16   L+.342  
      #15  R+ : //z 2015-05-28 17:45:17 L.217'22483 T1979531806.K ~295   R+.16   L+.338  V+.295  
@@ -117,7 +120,7 @@
      K Kersi : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      KVersio : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      K Versi : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     K  Vers : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
+     K  Vers : //z 2015-06-04 16:19:53 L.210'27607 T1565149273.K ~347   R+.17   L+.361  
      K   Ver : //z 2015-05-21 18:07:13 L.224'21167 T2791718322.K ~263   R+.14   L+.280  
      K    Ve : //z 2015-05-08 17:52:01 L.237'22079 T1800686291.K ~149   R+.10   L+.198  
      K     V : //z 2015-04-27 16:35:09 L.248'26691 T3582415387.K ~73    R+.4    L+.148  
@@ -347,3 +350,14 @@ http://www.gametutorials.com/ s 3ds
 02. 读取图像文件，可以使用 freeimg。
 re: 2015-05-29 16:01 zitem freeimage 结合play，载入其他类型素材（不限于tga）
 #endregion //z 2015-05-28 17:45:17 L.217'22483 BG57IV3@XCL T1979531806.K.F4146951713-+----+----+
+
+#region 06-04 16:18 R#.17   @high performance lock
+//z 2015-06-04 16:18:56 L.210'27664 T1565113339.K[T12,L354,R17,V337]
+01. 很多地方采用的轮询的方式。
+Slim Reader/Writer (SRW) Locks
+Fast critical sections with timeout
+http://www.codeproject.com/Articles/18371/Fast-critical-sections-with-timeout
+https://github.com/cameron314/readerwriterqueue
+http://libcds.sourceforge.net/
+http://www.codeproject.com/Articles/43510/Lock-Free-Single-Producer-Single-Consumer-Circular
+#endregion //z 2015-06-04 16:18:43 L.210'27677 BG57IV3@XCL T1565113303.K.F4146951713-+----+----+
